--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Roboto;
-  background: #8E0E00;
+  background: blue;
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #8E0E00, #1F1C18);
   /* Chrome 10-25, Safari 5.1-6 */
@@ -8,26 +8,26 @@ body {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-svg {
+body svg {
   height : 200px;
 }
- #heart {
+ body svg #heart {
   filter:url(#shadowFilter)
 } 
-#heart:hover {
+body svg #heart:hover {
     cursor : pointer;
   transform-origin : 50% 50%;
     filter:url(#beatingHeartFilter);
 }
-#heart1:hover {
+body svg #heart1:hover {
   cursor : pointer;
   transform-origin : 50% 50%;
     filter:url(#distortionFilter);
 }
-#heart2 {
+body svg #heart2 {
   filter : url(#shadowFilter);
 }
-#heart2:hover { 
+body svg #heart2:hover { 
    cursor : pointer;
 /*   transform-origin : 50% 50%; */
     filter:url(#fancyFilter);
